Fixed overflow images

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -71,3 +71,8 @@ pre code {
   padding: 0;
   background: initial;
 }
+
+/* Fix overflow width */
+img {
+  max-width: 100%;
+}
